# LS_PYTHON

./: regex_practice.py  scratch.py
LS180/: extrasolar.dump.sql  films_2.sql  weather_dump.sql
intro_to_python_book_exercises/: more_exercises.py
py100_basics/: debuggin.py  dictionaries.py  international2.py  lists.py  strings.py
py101/: exercises.py  scratch2.py  scratchpad.py
py110/: debugging.py  exam_prep.py  interview_prep.py  interview_prep_2.py  interview_prep_3.py  interview_prep_4.py  pedac_review.py  scratchpad.py  small_probs_advanced.py  small_probs_easy_1.py  small_probs_easy_2.py  small_probs_easy_3.py  small_probs_easy_4.py  small_probs_easy_5.py  small_probs_med_1.py  small_probs_med_2.py  spot_wiki.py
py120/: OOP_prob_sets_classes_objects.py  OO_basics_classes_objects_1.py  OO_basics_classes_objects_2.py  OO_basics_inheritance_mixins.py  OO_easy.py  OO_med.py  oop_book.py  prob_sets_inheritance.py
py130/: callables.py  decorators.py  example.txt  output.txt  practice_advanced.py  practice_args_params.py  practice_closures.py  practice_easy_1.py  practice_easy_2.py  practice_generators.py  practice_higher_order.py  practice_testing.py  scratch.py  working_w_files.py
py130/todolist_package/: README.md  pyproject.toml
py130/todolist_package/src/todolist_Tom_the_Human/: LICENSE.md
py130/todolist_package/src/todolist_Tom_the_Human.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py175/users_and_interests/: app.py  pyproject.toml  users.yaml
py175/users_and_interests/templates/: 404.html  layout.html  profile.html  search.html  users.html
(+96 files in other folders)
